--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -1,86 +1,111 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 * {
-  padding: 0;
-  margin: 0;
-  font-size: 1rem;
   font-family: "Roboto", sans-serif;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 1.6;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-}
-
-body {
-  height: 100svh;
-  width: 100svw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  color: black;
+  background-color: #faf9f6;
 }
 
 .container {
-  min-height: 100%;
-  max-width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 50%;
-}
-.container .left {
-  border: 1px solid red;
+  height: 100svh;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
-.container .right {
-  display: grid;
-  grid-template-rows: 25% 50% 25%;
-}
-.container .right > div {
-  border: 1px solid red;
-}
-.container .right .topSection {
-  font-size: 1rem;
-  padding: 2.5rem;
-  padding-top: 4rem;
-}
-.container .right .middleSection {
+.container .mainSection {
+  height: 100%;
+  width: 100%;
   display: flex;
+}
+.container .mainSection .left {
+  width: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e0dfdc;
+  text-align: center;
+  font-size: 9rem;
+  font-weight: bold;
+  position: relative;
+}
+.container .mainSection .right {
+  width: 60%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
   flex-flow: column;
-  padding: 2.5rem;
+  background-color: #faf9f6;
+  overflow: hidden;
 }
-.container .right .middleSection p {
-  color: rgb(255, 121, 121);
+.container .mainSection .right .topSection {
+  font-size: 1.2rem;
+  font-weight: 500;
+  text-align: justify;
+  padding: 30px 30px 30px 50px;
+}
+.container .mainSection .right .middleSection {
+  width: 100%;
+  box-shadow: 0px 0px 20px 10px #e0dfdc;
+  padding: 30px 30px 30px 50px;
+}
+.container .mainSection .right .middleSection p {
+  color: #ff7979;
   font-size: 0.8rem;
-  padding: 0;
+  height: 1ch;
 }
-.container .right .middleSection form {
+.container .mainSection .right .middleSection form {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  row-gap: 1rem;
+  row-gap: calc(1rem + 1.5px);
 }
-.container .right .middleSection form div:nth-last-child(1) {
+.container .mainSection .right .middleSection form div:nth-last-child(1) {
   padding-top: 1rem;
 }
-.container .right .middleSection form div:nth-last-child(1) button {
-  color: black;
-  background-color: rgb(240, 240, 240);
+.container .mainSection .right .middleSection form div:nth-last-child(1) button {
+  color: white;
+  background-color: #7a7a78;
   border: none;
   border-radius: 3px;
   cursor: pointer;
   padding: 7px;
   width: 200px;
 }
-.container .right .middleSection form div:nth-last-child(1) button:hover {
-  background-color: rgb(236, 236, 236);
+.container .mainSection .right .middleSection form div:nth-last-child(1) button:hover {
+  background-color: hsl(60, 1%, 53%);
 }
-.container .right .middleSection form [type]:not(button) {
-  border: 1px solid rgb(128, 128, 128);
+.container .mainSection .right .middleSection form [type]:not(button) {
+  border: 1px solid #808080;
   border-radius: 3px;
   padding-left: 5px;
 }
-.container .right .middleSection form [type]:not(button):focus {
-  box-shadow: 2px 2px 5px rgb(220, 220, 220);
+.container .mainSection .right .middleSection form [type]:not(button):focus {
+  box-shadow: 2px 2px 5px #dcdcdc;
   outline: none;
-  outline-color: rgb(128, 128, 128);
+  outline-color: #808080;
 }
-.container .right .bottomSection {
-  padding: 2.5rem;
+.container .mainSection .right .bottomSection {
+  padding: 30px 30px 30px 50px;
+  text-align: justify;
+}
+.container .footer {
+  height: 10%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 30px 30px 50px;
+  background-color: #3b3a39;
+}
+.container .footer footer,
+.container .footer a {
+  color: white;
+  background-color: #3b3a39;
+  font-size: 1.2rem;
+  font-weight: 100;
 }/*# sourceMappingURL=main-style.css.map */
